[tool.poetry]
name = "lesson10- testing"
version = "0.1.0"
description = ""
authors = ["Artemi Bogatov <aboga99@mail.ru>"]
readme = "README.md"
packages = [{include = "lesson10"}]

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
